# ChangeLog for net-misc/networkmanager
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/networkmanager/ChangeLog,v 1.47 2009/06/10 22:03:19 dagger Exp $

*networkmanager-0.7.1-r4 (10 Jun 2009)

  10 Jun 2009; Robert Piasek <dagger@gentoo.org>
  -networkmanager-0.7.1-r3.ebuild, +networkmanager-0.7.1-r4.ebuild:
  Backported some importent patches from NM trunk. Fixes gentoo bug #262112
  gnome bug #513820, rh bug #441070 among the others. Thanks to Pacho Ramos
  for investigating the problem (bug #262112).

  31 May 2009; Mike Auty <ikelos@gentoo.org> metadata.xml:
  Fixing typo in local USE flag description (see bug 271604).

  26 May 2009; Robert Piasek <dagger@gentoo.org> metadata.xml:
  Updated dagger's email address in metadata

*networkmanager-0.7.1-r3 (12 May 2009)

  12 May 2009; Robert Buchholz <rbu@gentoo.org>
  -networkmanager-0.7.0.ebuild, -networkmanager-0.7.1-r1.ebuild,
  -networkmanager-0.7.1-r2.ebuild, +networkmanager-0.7.1-r3.ebuild:
  fix udev rules path properly now, bug #253788

*networkmanager-0.7.1-r2 (02 May 2009)

  02 May 2009; Daniel Gryniewicz <dang@gentoo.org>
  +networkmanager-0.7.1-r2.ebuild,
  +files/networkmanager-0.7.1-confchanges.patch:
  Enable ck-based policy; bug #268223

*networkmanager-0.7.1-r1 (25 Apr 2009)

  25 Apr 2009; Robert Buchholz <rbu@gentoo.org>
  files/networkmanager-0.7.0-gentoo-dhclient.patch,
  +files/networkmanager-0.7.1-bad-link.patch, -networkmanager-0.7.1.ebuild,
  +networkmanager-0.7.1-r1.ebuild:
  Fix bug #267349 by Daniel Gryniewicz, NetworkManager-0.7 links against
  installed version of nm-util, specify udev directory for bug #267168.

  24 Apr 2009; Robert Buchholz <rbu@gentoo.org>
  +networkmanager-0.6.5_p20070823.ebuild:
  Readd NM 0.6.5 for ppc.

  22 Apr 2009; Robert Buchholz <rbu@gentoo.org> metadata.xml,
  networkmanager-0.7.1.ebuild:
  Add use flags for RFC 3927 link-local addresses via avahi and connection