@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/networkmanager
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/networkmanager/ChangeLog,v 1.47 2009/06/10 22:03:19 dagger Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/networkmanager/ChangeLog,v 1.48 2009/06/14 09:23:08 dagger Exp $
+
+  14 Jun 2009; Robert Piasek <dagger@gentoo.org>
+  +networkmanager-0.7.1-r3.ebuild:
+  Restored networkmanager-0.7.1-r3 version due to potential regression
+  problems as per bug (#273741).
 
 *networkmanager-0.7.1-r4 (10 Jun 2009)
 
